--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
     <main>
         <section id="presentacion">
             <h2>Presentación del Emprendimiento</h2>
-            <p><strong>Pinturas Verdes</strong> es un proyecto escolar de emprendimiento cuyo objetivo es ofrecer pinturas ecológicas, sostenibles y saludables para las personas y el medio ambiente. Este producto está diseñado para cubrir una necesidad creciente: decorar y proteger espacios sin contaminar.</p>
+            <p><strong>BioPint</strong> es un proyecto escolar de emprendimiento cuyo objetivo es ofrecer pinturas ecológicas, sostenibles y saludables para las personas y el medio ambiente. Este producto está diseñado para cubrir una necesidad creciente: decorar y proteger espacios sin contaminar.</p>
         </section>
 
         <section id="problema">
