--- a/Index.html
+++ b/Index.html
@@ -16,14 +16,13 @@
             <a href="#solucion">Solución</a>
             <a href="#ventajas">Ventajas</a>
             <a href="#ecologia">Ecología</a>
-            <a href="#contacto">Contacto</a>
         </nav>
     </header>
 
     <main>
         <section id="presentacion">
             <h2>Presentación del Emprendimiento</h2>
-            <p><strong>BioPint</strong> es un proyecto escolar de emprendimiento cuyo objetivo es ofrecer pinturas ecológicas, sostenibles y saludables para las personas y el medio ambiente. Este producto está diseñado para cubrir una necesidad creciente: decorar y proteger espacios sin contaminar.</p>
+            <p><strong>BioPint</strong> es un proyecto de emprendimiento cuyo objetivo es ofrecer pinturas ecológicas, sostenibles y saludables para las personas y el medio ambiente. Este producto está diseñado para cubrir una necesidad creciente: decorar y proteger espacios sin contaminar.</p>
         </section>
 
         <section id="problema">
@@ -50,13 +49,6 @@
         <section id="ecologia">
             <h2>Responsabilidad Ecológica</h2>
             <p>En <strong>BioPint</strong>, estamos comprometidos con prácticas responsables: utilizamos envases reciclables, fomentamos el reciclaje, y apoyamos campañas de concienciación ambiental en escuelas y comunidades.</p>
-        </section>
-
-        <section id="contacto">
-            <h2>Contacto</h2>
-            <p><strong>Email:</strong> contacto@pinturasverdes.com</p>
-            <p><strong>Teléfono:</strong> +81 8707 6188</p>
-            <p><strong>Redes Sociales:</strong> @BioPint (Instagram y Facebook)</p>
         </section>
     </main>
 
