--- a/Index.html
+++ b/Index.html
@@ -48,12 +48,12 @@
 
         <section id="ecologia">
             <h2>Responsabilidad Ecológica</h2>
-            <p>En <strong>BioPint</strong>, estamos comprometidos con prácticas responsables: utilizamos envases reciclables, fomentamos el reciclaje, y apoyamos campañas de concienciación ambiental en escuelas y comunidades.</p>
+            <p>En <strong>BioPint</strong>, estamos comprometidos con prácticas responsables: utilizamos envases reciclablesy fomentamos el reciclaje.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 BioPint. Proyecto escolar de emprendimiento.</p>
+        <p>&copy; 2025 BioPint. Proyecto de emprendimiento.</p>
     </footer>
 </body>
 </html>
