--- a/Index.html
+++ b/Index.html
@@ -48,12 +48,15 @@
 
         <section id="ecologia">
             <h2>Responsabilidad Ecológica</h2>
-            <p>En <strong>BioPint</strong>, estamos comprometidos con prácticas responsables: utilizamos envases reciclablesy fomentamos el reciclaje.</p>
+            <p>En <strong>BioPint</strong>, estamos comprometidos con prácticas responsables: utilizamos envases reciclables y fomentamos el reciclaje.</p>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2025 BioPint. Proyecto de emprendimiento.</p>
     </footer>
+
+<button id="btnTop" onclick="scrollToTop()">↑</button>
+    
 </body>
 </html>
