--- a/Index.html
+++ b/Index.html
@@ -57,6 +57,22 @@
     </footer>
 
 <button id="btnTop" onclick="scrollToTop()">↑</button>
+
+    <script>
+    const btnTop = document.getElementById('btnTop');
+
+    window.addEventListener('scroll', () => {
+        if (window.scrollY > 300) {
+            btnTop.classList.add('show');
+        } else {
+            btnTop.classList.remove('show');
+        }
+    });
+
+    function scrollToTop() {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+</script>
     
 </body>
 </html>
