--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <title>Flexi-Dig | Prótesis Modular de Dedo para una Vida Plena</title>
 
     <!-- Fuentes y Estilos -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@300;400&display=swap"
         rel="stylesheet">
@@ -29,7 +29,7 @@
     <header id="header" role="banner">
         <div class="container header-container">
             <a href="#hero" class="logo" aria-label="Inicio Flexi-Dig">
-                <img src="assets/logo.png" alt="Logo de Flexi-Dig">
+                <img src="logo.png" alt="Logo de Flexi-Dig">
             </a>
 
             <!-- Menú de tres puntos (visible solo en móviles) -->
@@ -209,7 +209,7 @@
         </div>
 
         <!-- Scripts -->
-        <script src="js/script.js" defer></script>
+        <script src="script.js" defer></script>
 </body>
 
 </html>
